--- a/pages/education/education.html
+++ b/pages/education/education.html
@@ -9,92 +9,100 @@
     </head>
     <body>
         <div id="nav">
-            <div id="menu-toggle">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-            <a href="./../../index.html" class="title"><h1>Noe Jager</h1></a>
-            <div class="links">
-                <a href="./../../index.html">Home</a>
-                <a href="../aboutme/aboutme.html">About Me</a>
-                <div class="dropdown">
-                    <a class="drop-trigger" href="./education.html">Education</a>
-                    <div class="dropdown-content">
-                        <a href="#masterUdem">Master</a>
-                        <a href="#bacUniLu">Bachelor</a>
-                        <a href="#oc">Online Courses</a>
+            <div class="nav_content">
+                <a href="./../../index.html" class="title"><h1>Noe Jager</h1></a>
+                <div class="links">
+                    <a href="./../../index.html">Home</a>
+                    <a href="../aboutme/aboutme.html">About Me</a>
+                    <div class="dropdown">
+                        <a class="drop-trigger" href="./education.html">Education</a>
+                        <div class="dropdown-content">
+                            <a href="#masterUdem">Master</a>
+                            <a href="#bacUniLu">Bachelor</a>
+                            <a href="#oc">Online Courses</a>
+                        </div>
                     </div>
-                </div>
-                <div class="dropdown">
-                    <a class="drop-trigger" href="../projects/projects.html">Projects</a>
-                    <div class="dropdown-content">
-                        <a href="../projects/projects.html#bachelor_projects">Bachelor Projects</a>
+                    <div class="dropdown">
+                        <a class="drop-trigger" href="../projects/projects.html">Projects</a>
+                        <div class="dropdown-content">
+                            <a href="../projects/projects.html#bachelor_projects">Bachelor Projects</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div id="sidebar">
-            <div class="links">
-                <a href="./../../index.html">Home</a>
-                <hr class="separator">
-                <a href="../aboutme/aboutme.html">About Me</a>
-                <hr class="separator">
-                <div class="dropdown">
-                    <a class="drop-trigger" href="./education.html">Education</a>
-                    <div class="dropdown-content">
-                        <a href="./education.html#masterUdem">Master</a>
-                        <a href="./education.html#bacUniLu">Bachelor</a>
-                        <a href="./education.html#oc">Online Courses</a>
+            <div class="sidebar_content">
+                <div class="links">
+                    <a href="./../../index.html">Home</a>
+                    <a href="../aboutme/aboutme.html">About Me</a>
+                    <div class="dropdown">
+                        <a class="drop-trigger" href="./education.html">Education</a>
+                        <div class="dropdown-content">
+                            <a href="./education.html#masterUdem">Master</a>
+                            <a href="./education.html#bacUniLu">Bachelor</a>
+                            <a href="./education.html#oc">Online Courses</a>
+                        </div>
                     </div>
-                </div>
-                <hr class="separator">
-                <div class="dropdown">
-                    <a class="drop-trigger" href="../projects/projects.html">Projects</a>
-                    <div class="dropdown-content">
-                        <a href="../projects/projects.html#bachelor_projects">Bachelor Projects</a>
+                    <div class="dropdown">
+                        <a class="drop-trigger" href="../projects/projects.html">Projects</a>
+                        <div class="dropdown-content">
+                            <a href="../projects/projects.html#bachelor_projects">Bachelor Projects</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <main id="education">
-            <h2>Education</h2>
-            <div class="anchor" id="masterUdem"></div>
-            <div>
-                <h4 class="title">Master in Computer Science at Université de Montréal</h4>
-                <ul>
-                    <li class="date">Date: September 2022 - Upcoming</li>
-                    <li>Relevant courses: Data Science, Machine Learning Fundamentals, and Data Visualization</li>
-                </ul>
-            </div>
-            <div class="anchor" id="bacUniLu"></div>
-            <div>
-                <h4 class="title">Bachelor of Science in Computer Science at University of Luxembourg</h4>
-                <ul>
-                    <li class="date">Date: September 2019 - July 2022</li>
-                    <li>GPA: 3.0</li>
-                    <li>
-                        Relevant courses: Web development, Software Engineering, Networking and Communication, Cybersecurity 1 and 2, <br>
-                        Human Computer Interaction and User Centered Design
-                    </li>
-                </ul>
-            </div>
-            <div class="anchor" id="oc"></div>
-            <div>
-                <h4 class="title">Online Courses</h4>
-                <ul>
-                    <li> Design in Art and Concepts Specialization (Coursera - CalArts) </li>
-                    <li> Data Mining Specialization by the University of Illinois at Urbana-Champaign </li>
-                </ul>
+        <main>
+            <div class="section" id="education">
+                <div class="content">
+                    <h2>Education</h2>
+                    <div class="anchor" id="masterUdem"></div>
+                    <div class="description">
+                        <h4>Master in Computer Science at Université de Montréal</h4>
+                        <ul>
+                            <li class="date">Date: September 2022 - Upcoming</li>
+                            <li>Relevant courses: Data Science, Machine Learning Fundamentals, and Data Visualization</li>
+                        </ul>
+                    </div>
+                    <div class="anchor" id="bacUniLu"></div>
+                    <div class="description">
+                        <h4>Bachelor of Science in Computer Science at University of Luxembourg</h4>
+                        <ul>
+                            <li class="date">Date: September 2019 - July 2022</li>
+                            <li>GPA: 3.0</li>
+                            <li>
+                                Relevant courses: Web development, Software Engineering, Networking and Communication, Cybersecurity 1 and 2, <br>
+                                Human Computer Interaction and User Centered Design
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="anchor" id="oc"></div>
+                    <div class="description">
+                        <h4>Online Courses</h4>
+                        <ul>
+                            <li> Design in Art and Concepts Specialization (Coursera - CalArts) </li>
+                            <li> Data Mining Specialization by the University of Illinois at Urbana-Champaign </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </main>
         <footer>
-            <h2>Contact Me</h2>
-            <figure class="contacts">
-                <a href="https://github.com/elnukakujo" target="_blank"><img src="../../assets/img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
-                <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="../../assets/img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
-                <a href="mailto:noe.p.jager@gmail.com"><img src="../../assets/img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
-            </figure>
+            <div class="content">
+                <h3>Contact Me</h3>
+                <figure id="contacts_links">
+                    <a class="img_container" href="https://github.com/elnukakujo" target="_blank">
+                        <img src="../../assets/img/logo/github_logo.jpg" alt="GitHub">
+                    </a>
+                    <a class="img_container" href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank">
+                        <img src="../../assets/img/logo/linkedin_logo.jpg" alt="Linkedin">
+                    </a>
+                    <a class="img_container" href="mailto:noe.p.jager@gmail.com">
+                        <img src="../../assets/img/logo/gmail_logo.jpg" alt="Gmail">
+                    </a>
+                </figure>
+            </div>
         </footer>
         <script src="../../events/script.js"></script>
     </body>
