Added the SportsAI project

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <div class="dropdown">
                         <a class="drop-trigger" href="./pages/projects/projects.html">Projects</a>
                         <div class="dropdown-content">
+                            <a href="./pages/projects/projects.html#master_projects">MasterProjects</a>
                             <a href="./pages/projects/projects.html#bachelor_projects">Bachelor Projects</a>
                         </div>
                     </div>
@@ -47,6 +48,7 @@
                 <div class="dropdown">
                     <a class="drop-trigger" href="./pages/projects/projects.html">Projects</a>
                     <div class="dropdown-content">
+                        <a href="./pages/projects/projects.html#master_projects">Master Projects</a>
                         <a href="./pages/projects/projects.html#bachelor_projects">Bachelor Projects</a>
                     </div>
                 </div>
@@ -110,6 +112,7 @@
                         </a>
                     </figure>
                     <div class="links">
+                        <a href="./pages/projects/projects.html#sportsai_website"><h4>Soccer coaching with SportsAI</h4></a>
                         <a href="./pages/projects/projects.html#drawing_with_webcam"><h4>Drawing with a webcam</h4></a>
                         <a href="./pages/projects/projects.html#privacy_app_figma"><h4>Design of a privacy app with Figma</h4></a>
                         <a href="./pages/projects/projects.html#handwriting_generator"><h4>Handwriting generator with Tensorflow</h4></a>
