--- a/pages/education/education.html
+++ b/pages/education/education.html
@@ -25,6 +25,7 @@
                     <div class="dropdown">
                         <a class="drop-trigger" href="../projects/projects.html">Projects</a>
                         <div class="dropdown-content">
+                            <a href="../projects/projects.html#master_projects">Master Projects</a>
                             <a href="../projects/projects.html#bachelor_projects">Bachelor Projects</a>
                         </div>
                     </div>
@@ -47,6 +48,7 @@
                     <div class="dropdown">
                         <a class="drop-trigger" href="../projects/projects.html">Projects</a>
                         <div class="dropdown-content">
+                            <a href="../projects/projects.html#master_projects">Master Projects</a>
                             <a href="../projects/projects.html#bachelor_projects">Bachelor Projects</a>
                         </div>
                     </div>
