--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -25,6 +25,7 @@
                     <div class="dropdown">
                         <a class="drop-trigger" href="./projects.html">Projects</a>
                         <div class="dropdown-content">
+                            <a href="./projects.html#master_projects">Master Projects</a>
                             <a href="./projects.html#bachelor_projects">Bachelor Projects</a>
                         </div>
                     </div>
@@ -47,6 +48,7 @@
                     <div class="dropdown">
                         <a class="drop-trigger" href="./projects.html">Projects</a>
                         <div class="dropdown-content">
+                            <a href="./projects.html#master_projects">Master Projects</a>
                             <a href="./projects.html#bachelor_projects">Bachelor Projects</a>
                         </div>
                     </div>
@@ -57,6 +59,30 @@
             <div class="section" id="projects">
                 <div class="content">
                     <h2>Projects</h2>
+                    <div class="anchor" id="master_projects"></div>
+                    <h3>Master Projects</h3>
+                    <div class="anchor" id="sportsai_website"></div>
+                    <div class="description">
+                        <h4><a href="https://sportsaiproject.onrender.com/" target="_blank">Soccer coaching with SportsAI</a></h4>
+                        <ul>
+                            <li class="date"> Date: May 2024 - June 2024 </li>
+                            <li> 
+                                With the tutoring of <a href="https://www.linkedin.com/in/hellen-vasques/" target="_blank">Hellen Vasquez</a> teacher at Polytechnique Montreal and 
+                                <a href="https://www.linkedin.com/in/tarikagday/" target="_blank">Tarik Agday</a> co-founder of SportsAI
+                            </li>
+                            <li> 
+                                Worked as a team with <a href="https://www.linkedin.com/in/omar-khedr-a7040a142/" target="_blank">Omar Mohamed Khedr</a>, 
+                                <a href="https://www.linkedin.com/in/a-basha/" target="_blank">Abdelrahman Basha</a>, 
+                                <a href="https://www.linkedin.com/in/arman-lidder/" target="_blank">Arman Lidder</a>,
+                                and <a href="https://www.linkedin.com/in/omar-alaaeldein/" target="_blank">Omar Alaaeldein</a>
+                            </li>
+                            <li> 
+                                A final project team in the course <a href="https://www.polymtl.ca/programmes/cours/visualisation-de-donnees" target="_blank">INF8808E: Data Visualization</a>
+                                at Polytechnique Montreal
+                            </li>
+                            <li> Implemented using Python Dash and Plotly, as well as Flask and CSS </li>
+                            <li> <a href="https://github.com/elnukakujo/INF8808_DataViz_SportsAIProject" target="_blank"> See the GitHub repository</a> </li>
+                        </ul>
                     <div class="anchor" id="bachelor_projects"></div>
                     <h3>Bachelor Projects</h3>
                     <div class="anchor" id="drawing_with_webcam"></div>
