Update SportsAi description

--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -71,10 +71,7 @@
                                 <a href="https://www.linkedin.com/in/tarikagday/" target="_blank">Tarik Agday</a> co-founder of SportsAI
                             </li>
                             <li> 
-                                Worked as a team with <a href="https://www.linkedin.com/in/omar-khedr-a7040a142/" target="_blank">Omar Mohamed Khedr</a>, 
-                                <a href="https://www.linkedin.com/in/a-basha/" target="_blank">Abdelrahman Basha</a>, 
-                                <a href="https://www.linkedin.com/in/arman-lidder/" target="_blank">Arman Lidder</a>,
-                                and <a href="https://www.linkedin.com/in/omar-alaaeldein/" target="_blank">Omar Alaaeldein</a>
+                                Worked as a team to create a website for soccer coaches to analyze and boost their players' performance 
                             </li>
                             <li> 
                                 A final project team in the course <a href="https://www.polymtl.ca/programmes/cours/visualisation-de-donnees" target="_blank">INF8808E: Data Visualization</a>
