Minor content and style update

--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
                         <p> 
                             I'm Noé Jager, a master's student in Computer Science, with a diverse skillset honed during my university years and 
                             a passion for tackling new challenges. Over time, I've gained extensive experience in programming, specializing in 
-                            Artificial Intelligence, Data Science, Data Visualizations, and more. Feel free to browse my portfolio. I'm excited to discuss 
-                            potential collaboration opportunities with you.
+                            Artificial Intelligence, Data Science, Data Visualizations, and more. I take great pride in all my projects, 
+                            because of all the skills they gave me so I warmly invite you to browse my portfolio. 
+                            I'm excited to discuss potential collaboration opportunities with you.
                         </p>
                     </div>
                 </div>
