Minor content change

--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -61,6 +61,14 @@
                     <h2>Projects</h2>
                     <div class="anchor" id="master_projects"></div>
                     <h3>Master Projects</h3>
+                    <div class="anchor" id="lol_analytics"></div>
+                    <div class="description">
+                        <h4>Analytics website for League of Legends</h4>
+                        <ul>
+                            <li class="date"> Date: June 2024 - In Progress </li>
+                            <li> <a href="https://github.com/AnalyticsLoL" target="_blank"> See the GitHub repository</a> </li>
+                        </ul>
+                    </div>
                     <div class="anchor" id="sportsai_website"></div>
                     <div class="description">
                         <h4><a href="https://sportsaiproject.onrender.com/" target="_blank">Soccer coaching with SportsAI</a></h4>
