--- a/404.html
+++ b/404.html
@@ -4,10 +4,11 @@
      <meta charset="utf-8">
      <title>Redirecting...</title>
      <script>
-       const repoName = 'elnukakujo.github.io'; // Replace with your repo name
+        const l = window.location;
+        const repoName = 'elnukakujo.github.io'; // Replace with your repo name
        
-       // Check if we're already in a redirect loop
-       if (!l.search.includes('redirected=true')) {
+        // Check if we're already in a redirect loop
+        if (!l.search.includes('redirected=true')) {
             const path = l.pathname;
             const basePath = path.startsWith(`/${repoName}/`) ? `/${repoName}` : '';
             const appPath = path.replace(new RegExp(`^${basePath}`), '');
